<resources>
    <!--    <string name="app_name">BookMyChore</string>-->
    <string name="app_name">BMC</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_profile">Profile</string>
    <string name="title_help">Help</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email_address">Email Address</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="prompt_address">Address</string>
    <string name="update">Update</string>
    <string name="help_center">Help Center</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="action_sign_up">Register</string>
    <string name="book_my_chore">BookMyChore</string>
    <string name="select_location">Select Location</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="updateSuccess">Profile successfully updated</string>
    <string name="user_question">If you have not found your answer.you can ask here.</string>
    <string name="register_success">Registration Successful</string>
    <string name="logout_success">You\'ve successfully logged out</string>

    <!-- Image content descriptions -->
    <string name="splash_c_d">image on the splash screen</string>
    <string name="login_logo_c_d">logo on login screen</string>

    <!-- Image descriptors -->
    <string name="imgTakePhoto">Take Photo</string>
    <string name="imgChooseFromGallery">Choose From Gallery</string>
    <string name="imgCancel">Cancel</string>
    <string name="imgSelectionTitle">Choose Your Profile Picture</string>

    <!-- Validation Errors -->
    <string name="invalidEmail">Please enter a valid email</string>
    <string name="loginFailed">Incorrect email address or password</string>
    <string name="invalidPhone">Please enter a valid phone number</string>
    <string name="registerFailed">Unable to register. Please try again.</string>
    <string name="registerFormError">Unable to load Registration form. Please try again.</string>
    <string name="imgModalError">Cannot open the selection modal. Please try again.</string>
    <string name="imgFromGalleryError">Unable to Preview Selected Picture From Gallery</string>
    <string name="imgCapturedError">Unable to Preview Captured Picture</string>
    <string name="imgUploadError">Unable to Upload Profile Picture</string>
    <string name="errProfileThumbnail">Unable to load Profile thumbnail</string>
    <string name="profileFormError">Unable to load Profile information. Please try again.</string>

    <!-- about app -->
    <string name="about_us_info">Book My Chore is an Android application that
provides on-demand location-based household services to users. The application
intends to improve the work-life balance of individuals who might find it challenging
to manage their work, family, and household chores by providing a platform in the
form of an android smartphone application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_bookings_found">No Bookings Found!</string>
    <string name="profileimg">profileimg</string>
    <string name="name">name</string>
    <string name="_4_5"> 4.5</string>
    <string name="date">date</string>
    <string name="servicename">servicename</string>
    <string name="hourlyrate">hourlyrate</string>



    <string name="bookingConfirmation">We are pleased to inform you that your booking request and been received and confirmed.</string>
    <string name="thankYou">Your booking is confirmed. Thank You!</string>
    <string name="bookingDetails">Booking Details</string>


</resources>
