<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="@dimen/profile_pic_size"
        android:layout_height="@dimen/profile_pic_size">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_account_box_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:background="@color/translucent_black"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_xs" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUserName"
        style="@style/Edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/prompt_username" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUserEmail"
        style="@style/Edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email_address"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUserMobile"
        style="@style/Edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_mobile_number"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUserPassword"
        style="@style/Edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUserAddress"
        style="@style/Edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_address"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:lines="2" />

</LinearLayout>