<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="clip_horizontal">



    <Button
        android:id="@+id/btnhelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_center"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/screen_margin"
        android:textSize="@dimen/font_size_xxxl"
        android:clickable="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnabout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_margin"
        android:text="@string/about_us"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_xxxl"
        android:layout_below="@+id/btnhelp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnrating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_us"
        android:layout_below="@id/btnabout"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_xxxl"
        android:layout_margin="@dimen/screen_margin"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>


</RelativeLayout>